fix: extra space in image

--- a/assets/styles/components/card/workDisplay.css
+++ b/assets/styles/components/card/workDisplay.css
@@ -1,5 +1,6 @@
 .cover-image {
   width: 100%;
+  display: block;
   transition: all var(--short-transition-time);
 }
 
